--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "homepage": "https://tableau.github.io/extension-parameter-actions/",
     "dependencies": {
-        "@tableau/widgets": "^6.2.1",
+        "@tableau/tableau-ui": "2.0.1",
         "@types/react-router-dom": "^4.2.7",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
@@ -15,8 +15,7 @@
         "start": "react-scripts-ts start",
         "build": "react-scripts-ts build && rd /s /q docs && mv build docs",
         "test": "react-scripts-ts test --env=jsdom",
-        "eject": "react-scripts-ts eject",
-        "copy": "xcopy \"C:\\Users\\krose\\Documents\\GitLab\\parameter-actions\\build\" \"C:\\Users\\krose\\Documents\\GitHub\\Parameter-Actions\" /i /s /y"
+        "eject": "react-scripts-ts eject"
     },
     "devDependencies": {
         "@types/jest": "^23.1.3",
